re-adjusted layout. fixed mobile version layout bug

--- a/styleTTT.css
+++ b/styleTTT.css
@@ -1,29 +1,67 @@
 
+
 body {
-    font-family: Montserrat, Oxygen, Muli;
-	background-color: #47B388;
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    background-color: #47B388;
     color: #0B7057;
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
     transition: 0.3s;
 }
 
+@media screen and (max-width: 765px) {
+
+    .navbar-nav li a:hover {
+        font-size: 150%;
+        font-weight: bold;
+        color: #3498DB !important;
+        transition: .1s;
+    }
+
+    .navbar:hover {
+        box-shadow: 0px .1px 20px black;
+        transition: 0.2s;
+        -webkit-transition: 0.2s;
+        -moz-transition: 0.2s;
+    }
+}
+
+
+
+
+.navbar {
+    font-family: Muli, sans-serif;
+    width: 100%;
+    border-radius: 0;
+    margin-bottom: 0;
+    font-size: 12px;
+    letter-spacing: 5px;
+    transition: 0.4s;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+}
 .gameboard .box:hover {
     box-shadow: 2px 2px 10px -4px #176143;
     -webkit-transition: 0.4s;
     -moz-transition: 0.4s;
     transition: 0.4s;
 }
-.statusboard {
-    margin-top: 3px;
+
+.status {
+    text-align: center;
+    margin: auto;
+    padding-left: 10px;
+    font-size: 12px;
 }
-.statusboard .start, .status {
-    margin-left: 6px;
+
+.statusboard {
+    text-align: center;
 }
 .start {
+    margin: auto;
+    width: 65px;
     color: #46946B;
     height: 30px;
-    width: 50px;
     border: 2px solid #DAE0DD;
     background-color: #D7E0DC;
     box-shadow: inset 0 0 0 0 #fff;
@@ -53,45 +91,43 @@ body {
   outline: none;
 }
 
-	border: 1px solid #47B388;
+    border: 1px solid #47B388;
 
 .wrapper {
-	display: flex;
+    display: flex;
     width: 300px;
     margin:0 auto;
-    justify-content: center;
-    align-items: center;
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
     transition: 0.3s;
 }
 .gameboard {
-	margin-top: 25%;
-    width: 398px;
-    height:398px;
+    padding-top: 60px;
+    margin: auto;
+    width: 350px;
+    height:350px;
     z-index: 1;
     -webkit-transition: 0.4s;
     -moz-transition: 0.4s;
     transition: 0.4s;
+    margin-bottom: 60px;
 }
 .gameboard .box {
-	background-color: #52D9A3;
-	margin: 6px;
-    width: 120px;
-    height: 120px;
+    background-color: #52D9A3;
+    margin: 6px;
+    width: 100px;
+    height: 100px;
     float: left;
     color: #fff;
     font-size: 45px;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-stretch: 120%;
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
     transition: 0.3s;
     box-shadow: 5px 5px 10px .2px #176143;
 }
-
 
 
 .gameboard .boxwin {
@@ -123,13 +159,5 @@ body {
     background-color: #52D9A3;
     box-shadow: none;
 }
-
-
-    
-
-
-
-
-
 
 
